ServiceEntry-and-WorkloadEntry/03-WorkloadEntry-Subset/04-vs-weight.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-external
spec:
  hosts:
  - nginx.icloud2native.com
  http:
  - name: default
    route:
    - destination:
        host: nginx.icloud2native.com
        subset: v21
      weight: 5
    - destination:
        host: nginx.icloud2native.com
        subset: v20
      weight: 95
